# crazyflie-lib-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
crazyflie-lib/: Cargo.toml  README.md
crazyflie-lib/examples/: basic.rs  test_disconnect.rs  test_logs.rs  test_params.rs  value.rs
crazyflie-lib/src/: commander.rs  crazyflie.rs  crtp_utils.rs  error.rs  lib.rs  log.rs  param.rs  value.rs
crazyflie-lib/src/subsystems/: log.rs  param.rs
demos/: Cargo.toml
examples/: appchannel.rs  basic.rs  commander_hover.rs  commander_position.rs  console.rs  display_eeprom.rs  display_loco.rs  emergency_stop.rs  emergency_watchdog.rs  external_position.rs  flash_aideck_esp.rs  flying_with_supervisor.rs  high_level_commander.rs  led_ring.rs  lighthouse_angles.rs  lighthouse_persist.rs  link_service.rs  list_logs.rs  list_memories.rs  list_params.rs  motor_ramp.rs  persistent.rs  print_logs.rs  read_ow.rs  reading_supervisor.rs  setpoint_hover.rs  setpoint_position.rs  test_disconnect.rs  test_logs.rs  test_params.rs  test_toc_cache.rs  trajectory.rs  value.rs
src/: commander.rs  crazyflie.rs  crtp_utils.rs  error.rs  lib.rs  log.rs  param.rs  value.rs
src/subsystems/: commander.rs  console.rs  high_level_commander.rs  link_service.rs  localization.rs  log.rs  mod.rs  param.rs  platform.rs  supervisor.rs
src/subsystems/memory/: deckmem.rs  eeprom_config.rs  led_driver.rs  lighthouse.rs  loco2.rs  memory_types.rs  mod.rs  ow.rs  raw.rs  trajectory.rs
tests/: syncsend_test.rs
wasm-binding/: Cargo.toml
wasm-binding/src/: lib.rs
