[package]
name = "crazyflie-lib"
version = "0.2.0"
authors = ["Arnaud Taffanel <arnaud@bitcraze.io>"]
edition = "2018"
description = "Crazyflie quadcopter control lib"
readme = "README.md"
repository = "https://github.com/bitcraze/crazyflie-lib-rs"
license = "MIT OR Apache-2.0"
keywords = ["crazyflie", "quadcopter", "drone"]
categories = ["hardware-support"]
exclude = [
    ".github/*"
]

[dependencies]
crazyflie-link = "0.3.0"
futures-util = "0.3.31"
futures = "0.3.31"
async-stream = "0.3.6"
flume = "0.11.0"
async-trait = "0.1.50"
num_enum = "0.7.3"
half = "2.4.1"
async-broadcast = "0.7.1"
tokio = { version = "1.36.0", features = ["full"] }
crc32fast = "1.5.0"
hex = "0.4.3"

[dev-dependencies]
env_logger = "0.11.5"
