[package]
name = "crazyflie-lib"
version = "0.5.1"
authors = [
  "Arnaud Taffanel <arnaud@bitcraze.io>",
  "Rik Bouwmeester <rik@bitcraze.io>",
  "Marcus Eliasson <marcus@bitcraze.io>"
]
edition = "2024"
description = "Crazyflie quadcopter control lib"
readme = "README.md"
repository = "https://github.com/bitcraze/crazyflie-lib-rs"
license = "MIT OR Apache-2.0"
keywords = ["crazyflie", "quadcopter", "drone"]
categories = ["hardware-support"]
exclude = [
    ".github/*"
]

[dependencies]
crazyflie-link = "0.4.0"
futures-util = "0.3.31"
futures = "0.3.31"
async-stream = "0.3.6"
flume = "0.12.0"
async-trait = "0.1.89"
num_enum = "0.7.5"
half = { version = "2.7.1", features = ["serde"] }
async-broadcast = "0.7.2"
tokio = { version = "1.48.0", features = ["full"] }
crc32fast = "1.5.0"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
libc = "0.2.181"

[dev-dependencies]
env_logger = "0.11.8"
