[package]
name = "crazyflie-lib-js"
version = "0.1.0"
authors = ["Arnaud Taffanel <arnaud@taffanel.org>"]
edition = "2018"
description = "Crazyflie lib for the web"
repository = "https://github.com/ataffanel/crazyflie-lib-rs.git"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.75"
wasm-bindgen-futures = "0.4.25"

async_executors = { version = "0.4.1", features = ["bindgen"] }
wasm-timer = "0.2.5"
futures = "0.3"

js-sys = "0.3.52"

serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

crazyflie-link = { git="https://github.com/ataffanel/crazyflie-link-rs", rev="ae09033", default-features = false, features = ["webusb"] }
crazyflie-lib = { path="../crazyflie-lib", default-features = false, features = ["web"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
